[gd_scene load_steps=14 format=3 uid="uid://d87c67oc0unn"]

[ext_resource type="Script" path="res://entities/squads/squad.gd" id="1_u12qt"]
[ext_resource type="Texture2D" uid="uid://bf844ywkl7h4m" path="res://assets/textures/misc/select_oval.png" id="2_5q8ut"]
[ext_resource type="PackedScene" uid="uid://bior7vn41ep74" path="res://entities/squads/squad_banner.tscn" id="3_3u8ik"]
[ext_resource type="Texture2D" uid="uid://b83kyc10o2n8c" path="res://assets/textures/particles/damage.png" id="4_ey47v"]
[ext_resource type="PackedScene" uid="uid://cxry4y10s3egj" path="res://entities/health_bar.tscn" id="5_m6g5u"]
[ext_resource type="Script" path="res://entities/squads/states/state_machine.gd" id="6_ivgqb"]
[ext_resource type="Texture2D" uid="uid://c61jub274cuxh" path="res://vfx/light_texture.tres" id="7_gu4l4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_icjdd"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e2di1"]
particle_flag_disable_z = true
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0
turbulence_noise_strength = 9.58
turbulence_noise_scale = 7.21
turbulence_noise_speed = Vector3(10, 0, 0)
turbulence_influence_min = 1.0
turbulence_influence_max = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_bc27l"]
font_size = 10

[sub_resource type="CircleShape2D" id="CircleShape2D_806k5"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fp8y0"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8wtwe"]
radius = 133.0

[node name="EmptySquad" type="CharacterBody2D" groups=["entities", "squads"]]
y_sort_enabled = true
collision_mask = 19
script = ExtResource("1_u12qt")
max_health = null
attack_cooldown = 144

[node name="SelectOval" type="Sprite2D" parent="."]
editor_description = "This will be visible whenever the squad is selected"
visible = false
z_index = -1
scale = Vector2(0.695, 0.695)
texture = ExtResource("2_5q8ut")

[node name="SquadBanner" parent="." instance=ExtResource("3_3u8ik")]
z_index = 1
position = Vector2(-3, -45)

[node name="AttackParticles" type="GPUParticles2D" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_icjdd")
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_e2di1")
texture = ExtResource("4_ey47v")
lifetime = 0.2
one_shot = true
explosiveness = 0.5

[node name="DebugLabel" type="Label" parent="."]
visible = false
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -59.0
offset_right = 42.5
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
text = "Chasing"
label_settings = SubResource("LabelSettings_bc27l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavigationTrail" type="Line2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("5_m6g5u")]
position = Vector2(0, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_806k5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 20.0
path_max_distance = 60.0
radius = 28.0
avoidance_layers = 0
avoidance_mask = 2
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 1, 1, 0.278431)

[node name="Rays" type="Node2D" parent="."]
rotation = -1.5708

[node name="RayCastFront" type="RayCast2D" parent="Rays"]
modulate = Color(0, 0.839216, 0.337255, 1)
position = Vector2(0, 25)
target_position = Vector2(0, 25)

[node name="RayCastLeft1" type="RayCast2D" parent="Rays"]
position = Vector2(12.5, 21.65)
target_position = Vector2(0, 25)

[node name="RayCastRight1" type="RayCast2D" parent="Rays"]
position = Vector2(-12.5, 21.65)
target_position = Vector2(0, 25)

[node name="PushArea" type="Area2D" parent="."]
editor_description = "After the squad finishes navigating to a target position, it will reposition itself if this area is intersecting with other squds"
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea"]
shape = SubResource("CircleShape2D_fp8y0")
debug_color = Color(0.65098, 0.407843, 0.819608, 0.196078)

[node name="AwarenessArea" type="Area2D" parent="."]
editor_description = "For detecting enemy squads"
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AwarenessArea"]
shape = SubResource("CircleShape2D_8wtwe")
debug_color = Color(0, 0.627451, 0.517647, 0.0431373)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("squad")]
script = ExtResource("6_ivgqb")
squad = NodePath("..")

[node name="PointLight2D" type="PointLight2D" parent="."]
blend_mode = 2
shadow_enabled = true
texture = ExtResource("7_gu4l4")
texture_scale = 8.0

[connection signal="health_changed" from="." to="HealthBar" method="on_health_changed"]
